--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,8 @@ analytics:
 author:
   name             : "鄭然齊"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "majimena hitoo mezasu"
-  location         : "Somewhere"
+  bio              : "真面目な人間を目指す"
+  location         : "東京"
   email            :
   links:
     - label: "Email"
