--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,9 @@
 main:
   - title: "Archive"
     url: /year-archive/
+
+  - title: "Archive"
+    url: /year-archive/
+    
+  - title: "Archive"
+    url: /year-archive/
